# AMBIENT-BD-REDCap_downloader

./: .envrc  REDCap_downloader.properties  pyproject.toml  setup.py
redcap_downloader/: generate_config.py  main.py
redcap_downloader/config/: properties.py
redcap_downloader/data_cleaning/: data_cleaner.py  helpers.py  replacements.py
redcap_downloader/redcap_api/: dom.py  redcap.py
tests/: test_cleaning_helpers.py  test_data_cleaner.py
tests/data/: test_ema_report.csv  test_report.csv  test_variables.csv
