[build-system]
requires = [
	 "setuptools"
]
build_backend = "setuptools.build_meta"

[project]
name = "redcap_downloader"
version = "0.3.2"
description = "Download, clean-up and organise data from REDCap"
readme = { content-type = "text/markdown", file = "README.md" }
requires-python = ">=3.10"
dependencies = [
        'pandas>=2.3.0',
        'requests>=2.32.0',
        'tabulate>=0.9.0'
]

[project.urls]
Homepage = 'https://github.com/chronopsychiatry/REDCap_downloader'

[project.scripts]
redcap_download = 'redcap_downloader:main.main'
redcap_generate_config = 'redcap_downloader.generate_config:generate_config'

[tool.setuptools.packages.find]
where = ["."]
